--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
   </head>
   <body>
     <div class="simulation">
-      <img
-        id="mainBg"
-        src="images/kitchen_e/in_1_6_x.png"
-        alt=""
-        class="hidden"
-      />
-      <img id="crEl" src="images/kitchen_e/c1_efi.png" alt="" class="hidden" />
-      <img id="iconLoader" src="images/icon_loader.gif" />
+      <img id="iconLoader" src="images/icon_loader.gif" style="display: none" />
 
       <img
         id="mainImage_canvas_rollover"
@@ -40,5 +33,5 @@
     <!-- <div class="loading-div"></div> -->
   </body>
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="canvas.js"></script>
+  <script src="js/canvas.js"></script>
 </html>
